# 3d-math-benchmark

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
results/: disassembly-gcc.txt  disassembly-msvc.txt  mat4_i7-8850H_clang-cl.txt  mat4_i7-8850H_msvc.txt  mat4_xeon_e5450_clang-cl.txt  mat4_xeon_e5450_gcc.txt  mat4_xeon_e5450_msvc.txt  new 1.txt  swizzle_i7-8850H_clang-cl.txt  swizzle_i7-8850H_msvc.txt  swizzle_xeon_e5450_clang-cl.txt  swizzle_xeon_e5450_gcc.txt  swizzle_xeon_e5450_msvc.txt  vec4_i7-8850H_clang-cl.txt  vec4_i7-8850H_msvc.txt  vec4_xeon_e5450_clang-cl.txt  vec4_xeon_e5450_gcc.txt  vec4_xeon_e5450_msvc.txt
results/Dissassemblies/: mat4-disassembly-clang-cl.txt  mat4-disassembly-gcc.txt  mat4-disassembly-msvc.txt  mat4_disassembly-msvc_avx2.txt  mat4_disassembly_clang-cl_avx2.txt  swizzle-disassembly-clang-cl.txt  swizzle-disassembly-gcc.txt  swizzle-disassembly-msvc.txt  vec4-disassembly-clang-cl.txt  vec4-disassembly-clang-cl_avx2.txt  vec4-disassembly-gcc.txt  vec4-disassembly-msvc.txt  vec4-disassembly-msvc_avx2.txt
src/: blaze_mat4.cpp  blaze_vec4.cpp  eigen_mat4.cpp  eigen_vec4.cpp  glm_mat4.cpp  glm_mat4_simd.cpp  glm_simd_swizzle.cpp  glm_swizzle.cpp  glm_vec4.cpp  glm_vec4_simd.cpp  mango_mat4.cpp  mango_swizzle.cpp  mango_vec4.cpp  mathfu_mat4.cpp  mathfu_vec4.cpp  prepare_test_data.h
